# lol-death-mia-pin

./: .gitignore  CMakeLists.txt  README.md  install.ps1  package.ps1
data/locale/: en-US.ini  ja-JP.ini
src/: animation-controller.c  animation-controller.h  lol-api-client.c  lol-api-client.h  mia-overlay.c  mia-overlay.h  pcm-decode.c  pcm-decode.h  plugin-main.c
